--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
     pinput: ^6.0.1
+    flutter_svg: ^2.2.3
 
   dev_dependencies:
     flutter_test:
