--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@
     flutter_svg: ^2.2.3
     dio: ^5.4.0
 
+    flutter_localizations:
+      sdk: flutter
+    
+    get: ^4.7.3
     
   dev_dependencies:
     flutter_test:
