--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,131 @@
-# Uncomment this line to define a global platform for your project
+# # Uncomment this line to define a global platform for your project
+# # platform :ios, '13.0'
+
+# # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
+# project 'Runner', {
+#   'Debug' => :debug,
+#   'Profile' => :release,
+#   'Release' => :release,
+# }
+
+# def flutter_root
+#   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
+#   unless File.exist?(generated_xcode_build_settings_path)
+#     raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure flutter pub get is executed first"
+#   end
+
+#   File.foreach(generated_xcode_build_settings_path) do |line|
+#     matches = line.match(/FLUTTER_ROOT\=(.*)/)
+#     return matches[1].strip if matches
+#   end
+#   raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
+# end
+
+# require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
+
+# flutter_ios_podfile_setup
+
+# target 'Runner' do
+#   use_frameworks!
+
+#   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+#   target 'RunnerTests' do
+#     inherit! :search_paths
+#   end
+# end
+
+# post_install do |installer|
+#   installer.pods_project.targets.each do |target|
+#     flutter_additional_ios_build_settings(target)
+#   end
+# end
+# # Uncomment this line to define a global platform for your project
 # platform :ios, '13.0'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
+# project 'Runner', {
+#   'Debug' => :debug,
+#   'Profile' => :release,
+#   'Release' => :release,
+# }
+
+# def flutter_root
+#   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
+#   unless File.exist?(generated_xcode_build_settings_path)
+#     raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure flutter pub get is executed first"
+#   end
+
+#   File.foreach(generated_xcode_build_settings_path) do |line|
+#     matches = line.match(/FLUTTER_ROOT\=(.*)/)
+#     return matches[1].strip if matches
+#   end
+#   raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
+# end
+
+# require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
+
+# flutter_ios_podfile_setup
+
+# # target 'Runner' do
+# #   use_frameworks!
+
+# #   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+# #   target 'RunnerTests' do
+# #     inherit! :search_paths
+# #   end
+# # end
+
+# # post_install do |installer|
+# #   installer.pods_project.targets.each do |target|
+# #     flutter_additional_ios_build_settings(target)
+# #   end
+# # end
+
+# target 'Runner' do
+#   use_frameworks! :linkage => :static
+#   use_modular_headers!
+
+#   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
+#   target 'RunnerTests' do
+#     inherit! :search_paths
+#   end
+# end
+
+# post_install do |installer|
+#   installer.pods_project.targets.each do |target|
+#     flutter_additional_ios_build_settings(target)
+
+#     target.build_configurations.each do |config|
+#       # Keep modules
+#       config.build_settings['DEFINES_MODULE'] = 'YES'
+#       config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
+
+#       # ✅ Make sure Flutter pod/framework is discoverable for ALL pods (including VerifyModule)
+#       config.build_settings['FRAMEWORK_SEARCH_PATHS'] ||= ['$(inherited)']
+#       config.build_settings['FRAMEWORK_SEARCH_PATHS'] << '$(PODS_ROOT)/Flutter'
+#       config.build_settings['FRAMEWORK_SEARCH_PATHS'] << '$(PODS_CONFIGURATION_BUILD_DIR)/Flutter'
+
+#       # (helps some toolchains)
+#       config.build_settings['HEADER_SEARCH_PATHS'] ||= ['$(inherited)']
+#       config.build_settings['HEADER_SEARCH_PATHS'] << '$(PODS_ROOT)/Headers/Public'
+#     end
+
+#     # ✅ This often stops the "VerifyModule/Test" compilation that breaks on Flutter imports
+#     if target.name == 'path_provider_foundation'
+#       target.build_configurations.each do |config|
+#         config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+#       end
+#     end
+#   end
+# end
+
+platform :ios, '13.0'
+
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -28,9 +152,8 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks!
-
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -41,3 +164,4 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
