--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@
     google_fonts:
     flutter:
       sdk: flutter
-
+    json_annotation: ^4.9.0
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
@@ -47,7 +47,8 @@
   dev_dependencies:
     flutter_test:
       sdk: flutter
-
+    json_serializable: ^6.8.0
+    build_runner: ^2.4.7  
     # The "flutter_lints" package below contains a set of recommended lints to
     # encourage good coding practices. The lint set provided by the package is
     # activated in the `analysis_options.yaml` file located at the root of your
