Added withdrawal page APIs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@
     qr_flutter: ^4.1.0
     screenshot: ^3.0.0
     gal: ^2.3.0
-    permission_handler: ^11.0.1
+    flutter_screenutil: ^5.0.0
+    mobile_scanner: ^5.0.0
+    permission_handler: ^11.3.0
     
   dev_dependencies:
     flutter_test:
@@ -88,6 +90,7 @@
       - assets/icons/withdrawal/
       - assets/icons/balance_history/
       - assets/icons/merchant_details/
+      - assets/icons/forgot_password/
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
