Profile page UI changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@
       - assets/icons/merchant_details/
       - assets/icons/forgot_password/
       - assets/icons/profile_page/
+      - assets/icons/profile_page/account_security/
       - assets/icons/p2p/
       - assets/app_icons/
 
