Address book UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@
       - assets/icons/forgot_password/
       - assets/icons/profile_page/
       - assets/icons/profile_page/account_security/
+      - assets/icons/profile_page/address/
       - assets/icons/p2p/
       - assets/app_icons/
 
