--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@
     permission_handler: ^11.3.0
     qr_code_scanner_plus: ^2.0.14
     table_calendar: ^3.2.0  
+    flutter_html: ^3.0.0
     
   dev_dependencies:
     flutter_test:
