Local currency chnage implementation MeController in initialBinding use controller global variable userAvatar and userName to listen for profile image and nickname Nikname complete integration Extract common InputTitleLable Local currency chnage implementation Common SoftCircularLoader AppInputDecorations About us safe resolveArticleMeta Appbar titleSpacing Common image nationality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@
     qr_code_scanner_plus: ^2.0.14
     table_calendar: ^3.2.0  
     flutter_html: ^3.0.0
+    shimmer: ^3.0.0
 
     cached_network_image: ^3.4.1
     
